Fixing Article spacing

--- a/packages/hex/src/lists/_resources.scss
+++ b/packages/hex/src/lists/_resources.scss
@@ -120,7 +120,6 @@ Check the [accesibility information of the Pagination component](/category/Compo
 */
 .articles {
   list-style: none;
-  margin: spacing('big') 0 0;
   padding-left: 0;
 
   &__article {
